packages/astro/e2e/fixtures/errors/src/pages/react-syntax-error.astro
---
import ReactSyntaxError from '../components/ReactSyntaxError.jsx';
---

<div>
  <ReactSyntaxError />
</div>
